--- a/index.html
+++ b/index.html
@@ -1,49 +1,126 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+    <title>Easy Presenter</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+    <link rel="stylesheet" href="css/reveal.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+    <!--  black: Black background, white text, blue links (default theme)
+          white: White background, black text, blue links
+          league: Gray background, white text, blue links (default theme for reveal.js < 3.0.0)
+          beige: Beige background, dark text, brown links
+          sky: Blue background, thin dark text, blue links
+          night: Black background, thick white text, orange links
+          serif: Cappuccino background, gray text, brown links
+          simple: White background, black text, blue links
+          solarized: Cream-colored background, dark green text, blue links -->
+    <link rel="stylesheet" href="css/theme/league.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+    <!-- Theme used for syntax highlighting of code -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+    <!-- Printing and PDF exports -->
+    <script>
+      var link = document.createElement( 'link' );
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      document.getElementsByTagName( 'head' )[0].appendChild( link );
+    </script>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+    <script src="lib/js/head.min.js"></script>
+    <script src="lib/js/jquery.3.2.1.min.js"></script>
+    <script src="js/reveal.js"></script>
+    <script src="js/reveal-github-loader.js"></script>
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+
+      </div>
+    </div>
+
+    <script>
+      jQuery(document).ready(function($) {
+        //do jQuery stuff when DOM is ready
+        new CwRevealLoader({
+          selector: '.reveal .slides',
+          presentation: 'https://raw.githubusercontent.com/easy-presentations/cw-wordpress-divi/master/de',
+          reveal: {
+            dependencies: [
+              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: 'plugin/zoom-js/zoom.js', async: true },
+              { src: 'plugin/notes/notes.js', async: true },
+              { src: 'plugin/math/math.js', async: true },
+            ],
+            controls: true, // Display controls in the bottom right corner
+            progress: true, // Display a presentation progress bar
+            defaultTiming: 120, // Set default timing of 2 minutes per slide
+
+            // Slide number formatting can be configured using these variables:
+            //  "h.v": 	horizontal . vertical slide number (default)
+            //  "h/v": 	horizontal / vertical slide number
+            //    "c": 	flattened slide number
+            //  "c/t": 	flattened slide number / total slides
+            slideNumber: "h.v", // Display the page number of the current slide
+
+            // Control which views the slide number displays on using the "showSlideNumber" value:
+            //     "all": show on all views (default)
+            // "speaker": only show slide numbers on speaker notes view
+            //   "print": only show slide numbers when printing to PDF
+
+            showSlideNumber: 'all',
+            history: false, // Push each slide change to the browser history
+            keyboard: true, // Enable keyboard shortcuts for navigation
+            overview: true, // Enable the slide overview mode
+            center: true, // Vertical centering of slides
+            touch: true, // Enables touch navigation on devices with touch input
+            loop: false, // Loop the presentation
+            rtl: false, // Change the presentation direction to be RTL
+            shuffle: false, // Randomizes the order of slides each time the presentation loads
+            fragments: true, // Turns fragments on and off globally
+            embedded: false, // Flags if the presentation is running in an embedded mode: i.e. contained within a limited portion of the screen
+            help: true, // Flags if we should show a help overlay when the questionmark key is pressed
+            showNotes: false, // Flags if speaker notes should be visible to all viewers
+
+            // Global override for autolaying embedded media (video/audio/iframe)
+            // - null: Media will only autoplay if data-autoplay is present
+            // - true: All media will autoplay, regardless of individual setting
+            // - false: No media will autoplay, regardless of individual setting
+            autoPlayMedia: null,
+
+            // Number of milliseconds between automatically proceeding to the
+            // next slide, disabled when set to 0, this value can be overwritten
+            // by using a data-autoslide attribute on your slides
+            autoSlide: 0,
+            autoSlideStoppable: true, // Stop auto-sliding after user input
+            autoSlideMethod: Reveal.navigateNext, // Use this method for navigation when auto-sliding
+            mouseWheel: false, // Enable slide navigation via mouse wheel
+            hideAddressBar: true, // Hides the address bar on mobile devices
+            previewLinks: false, // Opens links in an iframe preview overlay
+            transition: 'convex', // Transition style: none/fade/slide/convex/concave/zoom
+            transitionSpeed: 'default', // Transition speed: default/fast/slow
+            backgroundTransition: 'fade', // Transition style for full page slide backgrounds: none/fade/slide/convex/concave/zoom
+            viewDistance: 3, // Number of slides away from the current that are visible
+            parallaxBackgroundImage: '', // Parallax background image: e.g. "'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg'"
+            parallaxBackgroundSize: '', // Parallax background size: CSS syntax, e.g. "2100px 900px"
+
+            // Number of pixels to move the parallax background per slide
+            // - Calculated automatically unless specified
+            // - Set to 0 to disable movement along an axis
+            parallaxBackgroundHorizontal: null,
+            parallaxBackgroundVertical: null,
+            display: 'block' // The display mode that will be used to show slides
+          }
+        });
+      });
+
+    </script>
+  </body>
 </html>
