--- a/index.html
+++ b/index.html
@@ -29,6 +29,46 @@
       link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
       document.getElementsByTagName( 'head' )[0].appendChild( link );
 
+      var cwRevealConfig = {
+        presentation: 'https://raw.githubusercontent.com/easy-presentations/cw-wordpress-divi/master/de',
+        readme: 'https://github.com/easy-presentations/cw-wordpress-divi/blob/master/de/README.md',
+        reveal: {
+          controls: true,
+          progress: true,
+          defaultTiming: 120,
+          zoomKey: 'shift',
+          slideNumber: 'h.v',
+          pdfMaxPagesPerSlide: 1,
+          showSlideNumber: 'all',
+          history: true,
+          keyboard: true,
+          overview: true,
+          center: true,
+          touch: true,
+          loop: false,
+          rtl: false,
+          shuffle: false,
+          fragments: true,
+          embedded: false,
+          help: true,
+          showNotes: false,
+          autoPlayMedia: null,
+          autoSlide: 0,
+          autoSlideStoppable: true,
+          mouseWheel: false,
+          hideAddressBar: true,
+          previewLinks: false,
+          transition: 'convex',
+          transitionSpeed: 'default',
+          backgroundTransition: 'fade',
+          viewDistance: 3,
+          parallaxBackgroundImage: '',
+          parallaxBackgroundSize: '',
+          parallaxBackgroundHorizontal: null,
+          parallaxBackgroundVertical: null,
+          display: 'block',
+        }
+      };
     </script>
 
   </head>
