--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="lib/fancybox/jquery.fancybox.min.css">
     <script src="lib/fancybox/jquery.fancybox.min.js"></script>
 
-    <!-- Printing and PDF exports -->
     <script>
+      // pdf
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
       link.type = 'text/css';
