disable history pushes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           slideNumber: 'h.v',
           pdfMaxPagesPerSlide: 1,
           showSlideNumber: 'all',
-          history: true,
+          history: false,
           keyboard: true,
           overview: true,
           center: true,
