some enhancements on the loader

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           parallaxBackgroundHorizontal: null,
           parallaxBackgroundVertical: null,
           display: 'block',
+          rollingLinks: false,
+
         }
       };
     </script>
