--- a/index.html
+++ b/index.html
@@ -83,5 +83,9 @@
 
     <img src="images/loader.gif" class="loader" style="height: 100px; width: auto">
 
+    <a href="https://www.creative-workflow.berlin" target="_blank">
+      <img src="images/logo.png" class="logo">      
+    </a>
+
   </body>
 </html>
