add presentation selection page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,16 @@
           parallaxBackgroundVertical: null,
           display: 'block',
           rollingLinks: false,
-
+          autoSlideMethod: Reveal.navigateNext,
+          dependencies: [
+            { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+            { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+            { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+            { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+            { src: 'plugin/zoom-js/zoom.js', async: true },
+            { src: 'plugin/notes/notes.js', async: true },
+            { src: 'plugin/math/math.js', async: true }
+          ]
         }
       };
     </script>
@@ -75,7 +84,13 @@
   </head>
   <body class="loading">
 
-    <div class="reveal">
+    <div class="presentation-selector-container">
+      <div class="presentation-selector">
+        <h1>Verfügbare Präsentationen</h1>
+      </div>
+    </div>
+
+    <div class="reveal presentation">
       <div class="slides">
 
       </div>
