bg local, headline italic tags

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       document.getElementsByTagName( 'head' )[0].appendChild( link );
 
       var cwRevealConfig = {
-        presentation: 'https://raw.githubusercontent.com/easy-presentations/cw-wordpress-divi/master/tracks/01_wordpress_basics',
         reveal: {
           controls: true,
           progress: true,
@@ -39,7 +38,7 @@
           slideNumber: 'h.v',
           pdfMaxPagesPerSlide: 1,
           showSlideNumber: 'all',
-          history: false,
+          history: true,
           keyboard: true,
           overview: true,
           center: true,
